err/drax.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/drax'...
Listing './lib/python3.5/site-packages/drax/assets'...
Listing './lib/python3.5/site-packages/drax/assets/fonts'...
Listing './lib/python3.5/site-packages/drax/assets/js'...
Compiling './lib/python3.5/site-packages/drax/commands.py'...
***   File "./lib/python3.5/site-packages/drax/commands.py", line 19
    print USAGE
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/drax/dashboards'...
Listing './lib/python3.5/site-packages/drax/jobs'...
Compiling './lib/python3.5/site-packages/drax/server.py'...
***   File "./lib/python3.5/site-packages/drax/server.py", line 133
    print 'Starting server on port {}'.format(port)
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/drax/widgets'...
Listing './lib/python3.5/site-packages/drax/widgets/clock'...
Listing './lib/python3.5/site-packages/drax/widgets/heartbeat'...
Listing './lib/python3.5/site-packages/drax/widgets/image'...
Listing './lib/python3.5/site-packages/drax/widgets/list'...
Listing './lib/python3.5/site-packages/drax/widgets/meter'...
Listing './lib/python3.5/site-packages/drax/widgets/number'...
Listing './lib/python3.5/site-packages/drax/widgets/text'...
Listing './lib/python3.5/site-packages/drax-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
